--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,15 @@
 doctype 5
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(charset='utf-8')
+    meta(name='viewport', content='initial-scale=1.0, user-scalable=no')
+    meta(name='apple-mobile-web-app-capable', content='yes')
+    meta(name='apple-mobile-web-app-status-bar-style', content='black')
+    title "Voted"
+    link(rel='stylesheet', href='/stylesheets/jquery.mobile-1.3.1.css')
     script(type='text/javascript', src='/javascripts/jquery-1.9.1.js')
+    script(type='text/javascript', src='/javascripts/jquery.mobile-1.3.1.js')
+    script(type='text/javascript', src='/javascripts/codiqa.ext.js')
     script(type='text/javascript', src='/javascripts/jquery.qrcode.js')
   body
     block content
