--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,9 +7,11 @@ html
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
     title "Voted"
     link(rel='stylesheet', href='/stylesheets/jquery.mobile-1.3.1.css')
+    link(rel='stylesheet', href='/stylesheets/extra.css')
     script(type='text/javascript', src='/javascripts/jquery-1.9.1.js')
     script(type='text/javascript', src='/javascripts/jquery.mobile-1.3.1.js')
     script(type='text/javascript', src='/javascripts/codiqa.ext.js')
-    script(type='text/javascript', src='/javascripts/jquery.qrcode.js')
+    script(type='text/javascript', src='/javascripts/jquery.qrcode.min.js')
+    block scripts
   body
     block content
