QR code load works after post with delegates

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block scripts
+    script(type='text/javascript', src='/javascripts/poll_qr_delegate.js')
 
 block content
     #page1(data-role='page')
