Basics of io.socket usage and rooms

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,8 @@ extends layout
 
 block scripts
     script(type='text/javascript', src='/javascripts/poll_qr_delegate.js')
+    script(type='text/javascript', src='/javascripts/poll_socketio_delegate.js')
+
 
 block content
     #page1(data-role='page')
