--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,6 +12,7 @@ html
     script(type='text/javascript', src='/javascripts/jquery.mobile-1.3.1.js')
     script(type='text/javascript', src='/javascripts/codiqa.ext.js')
     script(type='text/javascript', src='/javascripts/jquery.qrcode.min.js')
+    script(type='text/javascript', src='/socket.io/socket.io.js')
     block scripts
   body
     block content
