--- a/public/stylesheets/extra.css
+++ b/public/stylesheets/extra.css
@@ -1,3 +1,16 @@
 #hdata {
     display:none;
 }
+
+#qrcontainer {
+    border:2px solid;
+    box-shadow: 10px 10px 5px #888888;
+    border-radius: 15px;
+    text-align: center;
+    width: 250px;
+    height: 250px;
+}
+
+#qrcode {
+    margin: 25px auto auto auto;
+}
